[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/crop/wood.png" type="Texture" id=1]
[ext_resource path="res://scripts/collectable/collectable_template.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="PhysicItem" type="RigidBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
can_apply_impulse = true

[node name="Texture" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ImpulseTimer" type="Timer" parent="."]

[node name="CollectableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="CollectableArea"]
shape = SubResource( 2 )

[node name="Notifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.76837e-07, -4.76837e-07 )
scale = Vector2( 0.6, 0.6 )

[connection signal="timeout" from="ImpulseTimer" to="." method="on_impulse_timer_timeout"]
[connection signal="body_entered" from="CollectableArea" to="." method="on_collectable_area_body_entered"]
[connection signal="screen_exited" from="Notifier2D" to="." method="on_screen_exited"]
